Avoid webcam overflow the screen

--- a/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/video-provider/video-list/styles.scss
@@ -57,10 +57,6 @@
     max-height: 100%;
   }
 
-  &:hover {
-    cursor: grabbing;
-  }
-
   width: var(--video-width);
   min-width: var(--video-width);
   height: calc(var(--video-width) / var(--video-ratio));
